[package]
name = "sysusage"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.20.4"
colored = "2.0.0"
num = "0.4.0"
itertools = "0.10.1"
phf = { version = "0.10.0", features = ["macros"]}
pretty_env_logger = "0.4.0"
log = "0.4.14"