[package]
name = "sysusage"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.20.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_ini = "0.2.0"
num = "0.4.0"
itertools = "0.10.1"
pretty_env_logger = "0.4.0"
log = "0.4.14"